# knowledge-processor

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/prompts/notes/: transcript.prompt.md
.github/skills/notes/: transcript.md
.github/templates/notes/: transcript.md
src/knowledge_processor/: __init__.py  get_transcripts.py  process.py
src/knowledge_processor/db/: db.py
src/knowledge_processor/db/utils/: utils.py
src/knowledge_processor/knowledge_source/youtube/: utils.py  youtube.py
src/knowledge_processor/models/: models.py
src/knowledge_processor/utils/: utils.py
