[project]
name = "knowledge-processor"
version = "0.1.0"
description = "Python package to process data from different sources"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
    "pytubefix>=10.7.1",
    "typer>=0.25.1",
    "youtube-transcript-api>=1.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "PT",     # flake8-pytest-style
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "TRY",    # tryceratops
    "PERF",   # perflint
    "FURB",   # refurb
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "TRY003",  # long exception messages
    "PLR0913", # too many arguments
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+_*))$"

[tool.ruff.lint.isort]
known-first-party = ["learning_it_general"]
force-single-line = false
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]  # allow assert and magic values in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

